Update actions and maven configuration